--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
 retrying==1.3.4
+setuptools==69.0.3
 six==1.16.0
 tenacity==8.2.3
 typing_extensions==4.9.0
